--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
             <div class="text-2-2 mt-5 d-flex justify-content-center">
                 <div>
                     const about = (Kko) => { <br>
-                    <span class="d-none d-md-block">&emsp;</span>&emsp;Name: <span>Kyaw Kyaw Oo</span> ; <br>
-                    <span class="d-none d-md-block">&emsp;</span>&emsp;Nickname: <span>Jerry</span> ; <br>
-                    <span class="d-none d-md-block">&emsp;</span>&emsp;Birthday: <span>April/23/2001</span> ; <br>
-                    <span class="d-none d-md-block">&emsp;</span>&emsp;Email: <span>kyawkyawjek@gmail.com</span> ; <br>
-                    <span class="d-none d-md-block">&emsp;</span>&emsp;Phone: <span>+959795559054</span> ; <br>
+                    <span class="invisible-sm visible-md">&emsp;</span>&emsp;Name: <span>Kyaw Kyaw Oo</span> ; <br>
+                    <span class="invisible-sm visible-md">&emsp;</span>&emsp;Nickname: <span>Jerry</span> ; <br>
+                    <span class="invisible-sm visible-md">&emsp;</span>&emsp;Birthday: <span>April/23/2001</span> ; <br>
+                    <span class="invisible-sm visible-md">&emsp;</span>&emsp;Email: <span>kyawkyawjek@gmail.com</span> ; <br>
+                    <span class="invisible-sm visible-md">&emsp;</span>&emsp;Phone: <span>+959795559054</span> ; <br>
                     }
                 </div>
             </div>
@@ -109,7 +109,7 @@
                             aria-controls="coding"
                         >
                         <img class="skills-logo" src="./assets/logo/ant-design_code-filled.svg" alt="coding logo" />
-                        <span style="margin-left: 30px">Coding</span>
+                        <span class="space">Coding</span>
                         </button>
                     </div>
                     <div class="col-6">
@@ -122,7 +122,8 @@
                             aria-controls="thinking"
                         >
                         <img class="skills-logo" src="./assets/logo/fluent_thinking-20-filled.svg" alt="thinking logo" />
-                        <span style="margin-left: 30px"><span class="d-none d-md-block">Critical </span>Thinking</span>
+                        <span class="d-none d-md-inline space">Critical Thinking</span>
+                        <span class="d-md-none space">Thinking</span>
                         </button>
                     </div>
                     <div class="col-12 mt-3">
@@ -174,7 +175,7 @@
                             aria-controls="debug"
                         >
                         <img class="skills-logo" src="./assets/logo/mdi_android-debug-bridge.svg" alt="debugging logo" />
-                        <span style="margin-left: 30px">Debugging</span>
+                        <span class="space">Debugging</span>
                         </button>
                     </div>
                     <div class="col-6 mt-3">
@@ -187,7 +188,7 @@
                             aria-controls="design"
                         >
                         <img class="skills-logo" src="./assets/logo/ic_sharp-design-services.svg" alt="design logo" />
-                        <span style="margin-left: 30px">Design</span>
+                        <span class="space">Design</spanc>
                         </button>
                     </div>
                     <div class="col-12 mt-3">
