--- a/index.html
+++ b/index.html
@@ -97,66 +97,52 @@
             </div>
 
             <div class="skills-board mt-5 d-flex align-content-center">
-                
+
                 <div class="row">
-                    <div class="col col-12 col-md-6 mt-3">
+                    <div class="col col-12 col-md-6 mt-3" onclick="switchVisible1();">
                         <button 
                             class="skills-btn" 
                             type="button" 
-                            data-bs-toggle="modal" 
-                            data-bs-target="#coding"
                         >
-                        <img class="skills-logo" src="./assets/logo/ant-design_code-filled.svg" alt="coding logo" />
-                        <span class="space">Coding</span>
+                        <div class="coding-1" id="coding-1">
+                            <img class="skills-logo" src="./assets/logo/ant-design_code-filled.svg" alt="coding logo" />
+                            <span class="space">Coding</span>
+                        </div>
+                        <div class="coding-2 justify-content-evenly" id="coding-2">
+                            <img 
+                                class="skills-logo-2"
+                                src="./assets/logo/logos_html-5.svg" 
+                                alt="HTML 5" 
+                                data-bs-toggle="tooltip" 
+                                data-bs-placement="top" 
+                                title="HTML 5"
+                            />
+                            <img 
+                                class="skills-logo-2" 
+                                src="./assets/logo/logos_css-3.svg" 
+                                alt="CSS 3"
+                                data-bs-toggle="tooltip" 
+                                data-bs-placement="top" 
+                                title="CSS 3"
+                            />
+                            <img 
+                                class="skills-logo-2" 
+                                src="./assets/logo/logos_javascript.svg" 
+                                alt="Javascript"
+                                data-bs-toggle="tooltip" 
+                                data-bs-placement="top" 
+                                title="Javascript"
+                            />
+                            <img 
+                                class="skills-logo-2" 
+                                src="./assets/logo/logos_bootstrap.svg" 
+                                alt="Bootstrap"
+                                data-bs-toggle="tooltip" 
+                                data-bs-placement="top" 
+                                title="Bootstrap"
+                            />
+                        </div>
                         </button>
-                    </div>
-                    <!-- Modal -->
-                    <div class="modal fade" id="coding" tabindex="-1" aria-labelledby="codingLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                            <h5 class="modal-title" id="codingLabel">Programming Languages</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body d-flex flex-row justify-content-evenly">
-                                <img 
-                                    class="skills-logo-2"
-                                    src="./assets/logo/logos_html-5.svg" 
-                                    alt="HTML 5" 
-                                    data-bs-toggle="tooltip" 
-                                    data-bs-placement="top" 
-                                    title="HTML 5"
-                                />
-                                <img 
-                                    class="skills-logo-2" 
-                                    src="./assets/logo/logos_css-3.svg" 
-                                    alt="CSS 3"
-                                    data-bs-toggle="tooltip" 
-                                    data-bs-placement="top" 
-                                    title="CSS 3"
-                                />
-                                <img 
-                                    class="skills-logo-2" 
-                                    src="./assets/logo/logos_javascript.svg" 
-                                    alt="Javascript"
-                                    data-bs-toggle="tooltip" 
-                                    data-bs-placement="top" 
-                                    title="Javascript"
-                                />
-                                <img 
-                                    class="skills-logo-2" 
-                                    src="./assets/logo/logos_bootstrap.svg" 
-                                    alt="Bootstrap"
-                                    data-bs-toggle="tooltip" 
-                                    data-bs-placement="top" 
-                                    title="Bootstrap"
-                                />
-                            </div>
-                            <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            </div>
-                        </div>
-                        </div>
                     </div>
 
                     <div class="col col-12 col-md-6 mt-3">
@@ -213,52 +199,38 @@
                             class="skills-btn" 
                             type="button" 
                         >
-                        <img class="skills-logo" src="./assets/logo/mdi_android-debug-bridge.svg" alt="debugging logo" />
-                        <span class="space">Debugging</span>
+                            <img class="skills-logo" src="./assets/logo/mdi_android-debug-bridge.svg" alt="debugging logo" />
+                            <span class="space">Debugging</span>
                         </button>
                     </div>
-                    <div class="col col-12 col-md-6 mt-3">
+                    <div class="col col-12 col-md-6 mt-3" onclick="switchVisible2();">
                         <button 
                             class="skills-btn" 
-                            type="button" 
-                            data-bs-toggle="modal" 
-                            data-bs-target="#design"
+                            type="button"
                         >
-                        <img class="skills-logo" src="./assets/logo/ic_sharp-design-services.svg" alt="design logo" />
-                        <span class="space">Design</spanc>
+                        <div class="design-1" id="design-1">
+                            <img class="skills-logo" src="./assets/logo/ic_sharp-design-services.svg" alt="design logo" />
+                            <span class="space">Design</span>
+                        </div>
+                        <div class="design-2 justify-content-evenly" id="design-2">
+                            <img 
+                                class="skills-logo-2" 
+                                src="./assets/logo/adobe-xd.svg" 
+                                alt="Adobe Xd"
+                                data-bs-toggle="tooltip" 
+                                data-bs-placement="top" 
+                                title="Adobe Xd"
+                            />
+                            <img 
+                                class="skills-logo-2" 
+                                src="./assets/logo/grommet-icons_figma.svg" 
+                                alt="Figma"
+                                data-bs-toggle="tooltip" 
+                                data-bs-placement="top" 
+                                title="Figma"
+                            />
+                        </div>
                         </button>
-                    </div>
-                    <!-- Modal -->
-                    <div class="modal fade" id="design" tabindex="-1" aria-labelledby="designLabel" aria-hidden="true">
-                        <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                            <h5 class="modal-title" id="designLabel">Designing Tools</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body d-flex flex-row justify-content-evenly">
-                                <img 
-                                    class="skills-logo-2" 
-                                    src="./assets/logo/adobe-xd.svg" 
-                                    alt="Adobe Xd"
-                                    data-bs-toggle="tooltip" 
-                                    data-bs-placement="top" 
-                                    title="Adobe Xd"
-                                />
-                                <img 
-                                    class="skills-logo-2" 
-                                    src="./assets/logo/grommet-icons_figma.svg" 
-                                    alt="Figma"
-                                    data-bs-toggle="tooltip" 
-                                    data-bs-placement="top" 
-                                    title="Figma"
-                                />
-                            </div>
-                            <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                            </div>
-                        </div>
-                        </div>
                     </div>
                     <!-- <div class="col col-12 mt-sm-0 mt-md-3 order-5">
                         <div class="collapse multi-collapse" id="design">
@@ -338,9 +310,13 @@
             </div>
 
         </section>
-
-
     </main>
+
+    <footer class="mt-5">
+        <div class="col-12 d-flex justify-content-center p-3">
+            <span class="footer-text-2">© 2021 KKO Portfolio | All Rights Reserved</span>
+        </div>
+    </footer>
 
 	<button class="scrollToTop" id="upBtn" onclick="topFunction();">
 		<img src="./assets/logo/upToTop.svg" class="upBtn" alt="UpToTop Btn">
@@ -351,6 +327,7 @@
 
     <script type="text/javascript" src="./assets/js/active.js"></script>
     <script type="text/javascript" src="./assets/js/upToTop.js"></script>
+    <script type="text/javascript" src="./assets/js/click.js"></script>
     <script type="text/javascript" src="./assets/js/modal.js"></script>
   </body>
 </html>
