--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
               <!-- <a class="nav-link p-3" href="#records">Records</a> -->
               <a class="nav-link p-3" href="#works">Works</a>
             </div>
+            <div class="overlay-content-social d-flex justify-content-center">
+                <a class="" href="https://www.facebook.com/kyawoo.23" target="_blank">
+                    <img class="custom-nav-logo" src="./assets/logo/akar-icons_facebook-fill.svg" alt="Facebook Logo" />
+                </a>
+                <a class="" href="#">
+                    <img class="custom-nav-logo" src="./assets/logo/akar-icons_twitter-fill.svg" alt="Twitter Logo" />
+                </a>
+                <a class="" href="#">
+                    <img class="custom-nav-logo" src="./assets/logo/brandico_linkedin.svg" alt="Linkedin Logo" />
+                </a>
+                <a class="" href="https://dribbble.com/kyawoo23" target="_blank">
+                    <img class="custom-nav-logo" src="./assets/logo/akar-icons_dribbble-fill.svg" alt="Dribbble Logo" />
+                </a>
+            </div>
           </div>
   
           <button class="navbar-toggler" type="button" aria-expanded="false" aria-label="Toggle navigation" onclick="openNav()">
@@ -38,7 +52,7 @@
             <a class="left-link left-title d-flex justify-content-center" href="#">
                 KKO
             </a>
-            <a class="left-link d-flex justify-content-center" href="#">
+            <a class="left-link d-flex justify-content-center" href="https://www.facebook.com/kyawoo.23" target="_blank">
                 <img class="h-50 w-50" src="./assets/logo/akar-icons_facebook-fill.svg" alt="Facebook Logo" />
             </a>
             <a class="left-link d-flex justify-content-center" href="#">
@@ -47,7 +61,7 @@
             <a class="left-link d-flex justify-content-center" href="#">
                 <img class="h-50 w-50" src="./assets/logo/brandico_linkedin.svg" alt="Linkedin Logo" />
             </a>
-            <a class="left-link d-flex justify-content-center" href="#">
+            <a class="left-link d-flex justify-content-center" href="https://dribbble.com/kyawoo23" target="_blank">
                 <img class="h-50 w-50" src="./assets/logo/akar-icons_dribbble-fill.svg" alt="Dribbble Logo" />
             </a>
             </nav>
