--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/ulg/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 
+    <script type="text/javascript" src="./assets/js/smoothscroll.js"></script>
     <script type="text/javascript" src="./assets/js/active.js"></script>
     <script type="text/javascript" src="./assets/js/overlay.js"></script>
     <script type="text/javascript" src="./assets/js/upToTop.js"></script>
