--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </div>
                 <div class="col col-12 col-lg-6 mt-5 mt-lg-0 d-flex justify-content-center justify-content-lg-end">
                     <div class="my-profile float-end">
-                        <img class="img-fluid" src="./assets/img/profile.webp" alt="My Photo" />
+                        <img class="img-fluid" src="./assets/img/profile.webp" loading="lazy" alt="My Photo" />
                     </div>
                 </div>
             </div>
@@ -323,20 +323,20 @@
                 </div>
 
                 <div class="project-img col-xs-12 col-sm-6 col-lg-4 col-xs-12 gx-0">
-                    <img id="myImg" class="img-fluid" src="./assets/works/Burmese-Ghouls.webp" alt="Burmese Ghouls Web Design" onclick="onClick(this);">
+                    <img id="myImg" class="img-fluid" src="./assets/works/Burmese-Ghouls.webp" alt="Burmese Ghouls Web Design" loading="lazy" onclick="onClick(this);">
                 </div>
                 <div class="project-img col-xs-12 col-sm-6 col-lg-4 col-xs-12 gx-0">
-                    <img id="myImg" class="img-fluid" src="./assets/works/Classy-Jerry.webp" alt="Classy Jerry Clothing App Design" onclick="onClick(this);">
+                    <img id="myImg" class="img-fluid" src="./assets/works/Classy-Jerry.webp" alt="Classy Jerry Clothing App Design" loading="lazy" onclick="onClick(this);">
                 </div>
                 <div class="project-img col-xs-12 col-sm-6 col-lg-4 col-xs-12 gx-0">
-                    <img id="myImg" class="img-fluid" src="./assets/works/YHS.webp" alt="Yangon Hospital Services Design" onclick="onClick(this);">
+                    <img id="myImg" class="img-fluid" src="./assets/works/YHS.webp" alt="Yangon Hospital Services Design" loading="lazy" onclick="onClick(this);">
                 </div>
     
                 <div class="project-img col-xs-12 col-sm-6 col-lg-4 col-xs-12 gx-0">
-                    <img id="myImg" class="img-fluid" src="./assets/works/JLPT-FlashCard.webp" alt="JLPT FlashCard App Design" onclick="onClick(this);">
+                    <img id="myImg" class="img-fluid" src="./assets/works/JLPT-FlashCard.webp" alt="JLPT FlashCard App Design" loading="lazy" onclick="onClick(this);">
                 </div>
                 <div class="project-img col-xs-12 col-sm-6 col-lg-4 col-xs-12 gx-0">
-                    <img id="myImg" class="img-fluid" src="./assets/works/My-Portfolio.webp" alt="My Portfolio Design" onclick="onClick(this);">
+                    <img id="myImg" class="img-fluid" src="./assets/works/My-Portfolio.webp" alt="My Portfolio Design" loading="lazy" onclick="onClick(this);">
                 </div>
                 <!-- <div class="project-img col-xs-12 col-sm-6 col-lg-4 col-xs-12 gx-0">
                     <img id="myImg" loading="lazy" class="img-fluid" src="./assets/works/.webp" alt="Daily Design Activity Website" onclick="onClick(this);">
