--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
+    <link rel="icon" type="image/x-icon" href="./assets/logo/favicon.svg">
     <link rel="stylesheet" type="text/css" href="./assets/css/styles.css"/>
     <link rel="stylesheet" type="text/css" href="./assets/css/modal.css"/>
     <title>Kko Portfolio</title>
@@ -27,16 +28,16 @@
             </div>
             <div class="overlay-content-social d-flex justify-content-center">
                 <a class="" href="https://www.facebook.com/kyawoo.23" target="_blank">
-                    <img class="custom-nav-logo" src="./assets/logo/akar-icons_facebook-fill.svg" alt="Facebook Logo" />
+                    <img class="custom-nav-logo" src="./assets/logo/5305154_fb_facebook_facebook logo_icon.svg" alt="Facebook Logo" />
                 </a>
-                <a class="" href="#">
-                    <img class="custom-nav-logo" src="./assets/logo/akar-icons_twitter-fill.svg" alt="Twitter Logo" />
+                <a class="" href="https://instagram.com/kyawkyawoo23">
+                    <img class="custom-nav-logo" src="./assets/logo/1161954_instagram_icon.svg" alt="Instagram Logo" />
                 </a>
-                <a class="" href="#">
-                    <img class="custom-nav-logo" src="./assets/logo/brandico_linkedin.svg" alt="Linkedin Logo" />
+                <a class="" href="https://www.behance.net/kyawoo3">
+                    <img class="custom-nav-logo" src="./assets/logo/104426_behance_portfolio_icon.svg" alt="Behance Logo" />
                 </a>
                 <a class="" href="https://dribbble.com/kyawoo23" target="_blank">
-                    <img class="custom-nav-logo" src="./assets/logo/akar-icons_dribbble-fill.svg" alt="Dribbble Logo" />
+                    <img class="custom-nav-logo" src="./assets/logo/5279110_basketball_dribbble_dribbble logo_icon.svg" alt="Dribbble Logo" />
                 </a>
             </div>
           </div>
@@ -52,17 +53,17 @@
             <a class="left-link left-title d-flex justify-content-center" href="#">
                 KKO
             </a>
-            <a class="left-link d-flex justify-content-center" href="https://www.facebook.com/kyawoo.23" target="_blank">
-                <img class="h-50 w-50" src="./assets/logo/akar-icons_facebook-fill.svg" alt="Facebook Logo" />
+            <a class="left-link d-flex justify-content-center" href="https://www.facebook.com/kyawoo.23">
+                <img class="h-75 w-75" src="./assets/logo/5305154_fb_facebook_facebook logo_icon.svg" alt="Facebook Logo" />
             </a>
-            <a class="left-link d-flex justify-content-center" href="#">
-                <img class="h-50 w-50" src="./assets/logo/akar-icons_twitter-fill.svg" alt="Twitter Logo" />
+            <a class="left-link d-flex justify-content-center" href="https://instagram.com/kyawkyawoo23">
+                <img class="h-75 w-75" src="./assets/logo/1161954_instagram_icon.svg" alt="Instagram Logo" />
             </a>
-            <a class="left-link d-flex justify-content-center" href="#">
-                <img class="h-50 w-50" src="./assets/logo/brandico_linkedin.svg" alt="Linkedin Logo" />
+            <a class="left-link d-flex justify-content-center" href="https://www.behance.net/kyawoo3">
+                <img class="h-75 w-75" src="./assets/logo/104426_behance_portfolio_icon.svg" alt="Behance Logo" />
             </a>
-            <a class="left-link d-flex justify-content-center" href="https://dribbble.com/kyawoo23" target="_blank">
-                <img class="h-50 w-50" src="./assets/logo/akar-icons_dribbble-fill.svg" alt="Dribbble Logo" />
+            <a class="left-link d-flex justify-content-center" href="https://dribbble.com/kyawoo23">
+                <img class="h-75 w-75" src="./assets/logo/5279110_basketball_dribbble_dribbble logo_icon.svg" alt="Dribbble Logo" />
             </a>
             </nav>
     </div>
